Fixed #343 - hard to read fonts on windows.

--- a/css/base_syntax.css
+++ b/css/base_syntax.css
@@ -22,12 +22,12 @@
 code {
     font-family: 'Source Code Pro', monospace;
     border: 1px solid #d5d5d5;
-    padding: 0 2px;
+    padding: 1px 3px;
     background-color: rgba(249, 249, 249, 0.47);
     font-size: 13px;
     font-weight: 300;
     border-radius: 3px;
-    color: #888;
+    color: #333;
     display: inline-block;
     line-height: 16px;
 }
